# minimal_eframe_template

./: Cargo.toml  README.md
src/: app.rs  main.rs
